<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".HorarioActivity">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_blocks" />

            <TextView
                android:id="@+id/Lunes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_lunes" />

            <TextView
                android:id="@+id/Martes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_martes" />

            <TextView
                android:id="@+id/Miercoles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_miercoles" />

            <TextView
                android:id="@+id/Jueves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_jueves" />

            <TextView
                android:id="@+id/Viernes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_viernes" />
    </TableRow>
</androidx.constraintlayout.widget.ConstraintLayout>